syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
option csharp_namespace = "Videa.RateCardManager.Service.Proto.Types";

service RateCardManagerService {
	rpc GetRateCard (GetRateCardRequest) returns (GetRateCardResponse) {}
}
message GetRateCardRequest {
}
message GetRateCardResponse {
}

